renames unit tests, introduces new module test for goal module, enhances test data creation endpoint (with adding multiple users)